# readline4k

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci.yml
build-logic/plugins/: build.gradle.kts
docs/: index.html  navigation.html  package-list
docs/readline4k/: index.html  navigation.html
docs/readline4k/io.github.smyrgeorge.readline4k/: index.html
docs/readline4k/io.github.smyrgeorge.readline4k.impl/: index.html
docs/readline4k/io.github.smyrgeorge.readline4k.impl/-file-completer-line-editor/: -file-completer-line-editor.html  add-history-entry.html  clear-history.html  config.html  index.html  line-prefix.html  load-history.html  read-line.html  save-history.html
docs/readline4k/io.github.smyrgeorge.readline4k.impl/-password-highlighter/: -password-highlighter.html  highlight-char.html  highlight.html  index.html
docs/readline4k/io.github.smyrgeorge.readline4k.impl/-simple-file-completer/: -simple-file-completer.html  complete.html  index.html
docs/readline4k/io.github.smyrgeorge.readline4k.impl/-simple-highlighter/: -simple-highlighter.html  highlight-candidate.html  highlight-hint.html  highlight-prompt.html  index.html
docs/scripts/: pages.json  sourceset_dependencies.js
dokka/: build.gradle.kts
examples/: build.gradle.kts
examples/src/nativeMain/kotlin/: Main.kt
gradle/: libs.versions.toml
readline4k/: build.gradle.kts  readline4k.h
readline4k/src/rust/: Cargo.toml  build.rs
readline4k/src/rust/src/: lib.rs
scripts/: config.toml  publish.sh
(+155 files in other folders)
